Generalise the Java helpers for the year 2023 (and Java 21)