@@ -4,14 +4,8 @@ plugins {
     id 'application'
 }
 
-sourceCompatibility = 16
-targetCompatibility = 16
-
-/* No longer needed with JDK 16...
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-*/
+sourceCompatibility = 21
+targetCompatibility = 21
 
 applicationName = 'AoC'
 mainClassName = 'framework.AoC'
@@ -19,7 +13,6 @@ version = '0.2020'
 
 applicationDefaultJvmArgs = [
     "-Xmx6G", "-Xms6G", "-XX:+UseParallelGC"
-    //, "--enable-preview"
 ]
 
 repositories {
@@ -28,8 +21,7 @@ repositories {
 }
 
 dependencies {
-    //implementation 'au.com.bytecode:opencsv:2.4'
-    implementation 'com.google.guava:guava:28.1-jre'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+    implementation 'com.google.guava:guava:32.0.1-jre'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.1")
 }
